# c3sc

./: .gitignore  CMakeLists.txt  README  README.md  add_license_split.py  fileheaders.txt  update_file_headers.py
cmake/: c3sc-config.cmake
data/dp2d/: plotcost.tex
data/dubinscar/: sim.tex
data/lqg2d/: plotcontrol.tex  plotcost.tex  sim.tex
data/markov2d/: sim.tex
data/sim2d/: sim.tex
examples/: CMakeLists.txt
examples/co_new/: CMakeLists.txt  co.c
examples/copterorientation/: CMakeLists.txt  co.c
examples/cothrust/: CMakeLists.txt  copterposethruststar1_test2.c
examples/cothrust2/: CMakeLists.txt  copterposethrust.c
examples/cothrust_onbound/: CMakeLists.txt  co.c
examples/double_int/: CMakeLists.txt  double_int.c
examples/dp2d/: CMakeLists.txt  dp2d.c
examples/dubinscar/: CMakeLists.txt  dubinscar.c
examples/dubinscar_new/: CMakeLists.txt  dubinscar.c
examples/lqg2d/: CMakeLists.txt  lqg2d.c
examples/lqg2d_new/: CMakeLists.txt  lqg2d.c
examples/lqg2dreflect/: CMakeLists.txt  lqg2dr.c
examples/lqgnd/: CMakeLists.txt  lqgnd.c
examples/markov2d/: CMakeLists.txt  markov2d.c
examples/mintime1/: CMakeLists.txt  mintime1.c
examples/perching/: CMakeLists.txt  perch.c
examples/rossler/: CMakeLists.txt  plot_rossler.gp  rossler.c
examples/sim2d/: CMakeLists.txt  sim2d.c
examples/skidding5d/: CMakeLists.txt  scar.c
examples/skidding_car/: CMakeLists.txt  scar.c
examples/vtol/: CMakeLists.txt  vtol.c
miscellaneous/: CMakeLists.txt  parallel_check.c
src/: CMakeLists.txt  bellman.c  bellman.h  boundary.c  boundary.h  c3control.c  c3sc.h  c3sc_elements.h  control.c  control.h  cost.c  cost.h  dp.c  dp.h  dpih.c  dynamics.c  dynamics.h  hashgrid.c  hashgrid.h  integrate.c  integrate.h  nodeutil.c  nodeutil.h  simulate.c  simulate.h  tensmarkov.c  tensmarkov.h  util.c  util.h  valuefunc.c  valuefunc.h
test/: CMakeLists.txt
test/hashgrid_test/: AllMyTests.c  CMakeLists.txt  hashgrid_test.c
test/mca_test/: AllMyTests.c  CMakeLists.txt  mca_test.c
test/transition_prob/: AllMyTests.c  CMakeLists.txt  tprob_test.c
