cmake_minimum_required (VERSION 2.6)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

#add_subdirectory(sim2d)
#add_subdirectory(markov2d)
#add_subdirectory(dp2d)
add_subdirectory(lqg2d)
# add_subdirectory(lqg2dreflect)
# add_subdirectory(dubinscar)
# add_subdirectory(copterorientation)
