cmake_minimum_required (VERSION 2.6)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(lqg2d_new)
add_subdirectory(lqgnd)
add_subdirectory(double_int)
add_subdirectory(rossler)
add_subdirectory(dubinscar_new)
add_subdirectory(cothrust2)
add_subdirectory(skidding_car)
add_subdirectory(skidding5d)
add_subdirectory(perching)
